--- a/Changelog
+++ b/Changelog
@@ -1,11 +1,25 @@
 #
-# $ProjectHeader: StuStaNet-Satzung 3.2 Fri, 02 Jul 1999 04:15:42 +0200 walterw $
-# $Revision: 1.12 $
+# $ProjectHeader: StuStaNet-Satzung 4.3 Tue, 12 Nov 2002 18:04:47 +0100 v-doku $
+# $Revision: 1.14 $
 #
+
+12.11.2002	Christian Schupfner
+	PDF Dokument der Satzung erzeugt.
+
+17.01.2002	Wolfgang Walter
+	Version gemäß der Satzungsänderung der Mitgliedervollversammlung vom
+		12.12.2001:
+		redaktionelle änderungen auf der MVV eingearbeitet
+	Status: gültig
+
+09.10.2001	Wolfgang Walter
+	Änderungen eingearbeitet, die der vorstand bei der mvv WS2001/2002
+		beantragen will
 
 02.07.1999	Wolfgang Walter
 	redaktionelle änderung: druckfehler in Art 10 Satz 5:
 		statt Satz 4 heiß es Absatz 5
+	Status: gültig
 
 25.06.1999	Wolfgang Walter
 	Version gemäß der Satzungsänderung der Mitgliedervollversammlung vom
