--- a/satzung.tex
+++ b/satzung.tex
@@ -1,8 +1,8 @@
 %% $Project: StuStaNet-Satzung $
-%% $ProjectVersion: 3.2 $
-%% $ProjectDate: Fri, 02 Jul 1999 04:15:42 +0200 $
+%% $ProjectVersion: 4.3 $
+%% $ProjectDate: Tue, 12 Nov 2002 18:04:47 +0100 $
 %% $Source: satzung.tex $
-%% $Revision: 1.12 $
+%% $Revision: 1.13 $
 
 \documentclass[12pt]{article}
 
@@ -36,7 +36,7 @@
 \parskip1.0ex plus0.1ex minus0.1ex
 
 \title{\bf Satzung des Netzvereins StuStaNet e.V.}
-\date{15. Juni 1999}
+\date{12. Dezember 2001}
 \begin{document}
 \maketitle
 
@@ -68,7 +68,7 @@ Akademie der Wissenschaften zusammen.}
 
 \begin{Artikel}{3}{Gemeinnützigkeit}
 
-Der Verein verfolgt aussschließlich und unmittelbar gemeinnützige Zwecke im
+Der Verein verfolgt ausschließlich und unmittelbar gemeinnützige Zwecke im
 Sinne des Abschnitts {\it Steuerbegünstigte Zwecke} der Abgabenordnung.  Der
 Verein ist selbstlos tätig; er verfolgt nicht in erster Linie
 eigenwirtschaftliche Zwecke. Mittel des Vereins dürfen nur für die
@@ -95,9 +95,11 @@ und Feiertagen sind unzulässig, es sei denn, das Gremium ist vollzählig.
 Insbesondere ist auf die Einhaltung einer angemessenen Frist zwischen
 Einberufung und Sitzungstermin zu achten.}
 
-\Satz{2}{Gewählt ist, wer mehr als die Hälfte der gültig abgegebenen Stimmen
-erhält. Erreicht dies kein Kandidat, findet eine Stichwahl zwischen den beiden
-bestplazierten statt.}
+\Satz{2}{Enthaltungen werden als ungültige Stimmen gewertet. Soweit diese
+Satzung nichts anderes bestimmt, werden Beschlüsse mit der Mehrheit der
+gültigen Stimmen gefaßt. Gewählt ist, wer mehr als die Hälfte der gültig
+abgegebenen Stimmen erhält. Erreicht dies kein Kandidat, findet eine Stichwahl
+zwischen den beiden bestplatzierten statt.}
 
 \Satz{3}{Von jeder Sitzung wird ein Protokoll angefertigt und an den Vorstand
 weitergeleitet. Beschlüsse werden vom Vorstand im Netz veröffentlicht.
@@ -109,10 +111,11 @@ Nutzungsbedingungen muß die aktuelle Fassung im Netz zugänglich sein.}
 
 \Satz{5}{Im Eingangsbereich des Roten Hauses, Christoph-Probst-Str. 6, 80805
 Mün\-chen, wird eine Anschlagtafel angebracht. Diese ist der offizielle
-Vereinsanzeiger. Hat ein Mitglied keine Gelegenheit, den Vereinsanzeiger
-einzusehen, so kann er bis 1. April bzw. 1. Oktober für das jeweils folgende
-Semester beim Vorstand schriftlich beantragen, auf dem Postweg zu den
-Versammlungen eingeladen zu werden.}
+Vereinsanzeiger. Zusätzlich werden die Mitteilungen unter der URL
+"`http://vereinsanzeiger.stusta.mhn.de/"' veröffentlicht.  Hat ein Mitglied
+keine Gelegenheit, den Vereinsanzeiger einzusehen, so kann er bis 1. April bzw.
+1. Oktober für das jeweils folgende Semester beim Vorstand schriftlich
+beantragen, auf dem Postweg zu den Versammlungen eingeladen zu werden.}
 
 \end{Artikel}
 
@@ -132,8 +135,9 @@ Abs. 3 ist anzuwenden.}
 \Satz{1}{Jedes Mitglied hat eine Stimme auf der Mitgliedervollversammlung und
 der Hausmitgliederversammlung seines Hauses.}
 
-\Satz{2}{Es erhalten grundsätzlich nur Mitglieder Netzzugang. Der
-Administratorenrat erläßt verbindliche Nutzungsbedingungen.}
+\Satz{2}{Vom Verein angebotene Netzdienste stehen grundsätzlich allen
+Mitgliedern offen. Der Administratorenrat erläßt verbindliche
+Nutzungsbedingungen.}
 
 \Satz{3}{Anschriftenänderungen sind dem Vorstand unverzüglich anzuzeigen.}
 
@@ -150,7 +154,7 @@ Bei Beitragsrückstand erfolgt die Streichung aus der Mitgliederliste gemäß Art.
 10.}
 
 \Satz{2}{Es werden Aufnahmebeiträge erhoben. Über die Höhe befindet die
-Mitgliedervollversammlung, oder bis zur Höhe von 40 DM der Vorstand.}
+Mitgliedervollversammlung oder bis zur Höhe von 25 EUR der Vorstand.}
 
 \end{Artikel}
 
@@ -163,15 +167,17 @@ Mitgliedervollversammlung zu Ehrenmitgliedern ernannt werden.}
 \Satz{2}{Die Ehrenmitgliedschaft ist auf fünf Jahre befristet. Der Vorstand
 kann sie auf Antrag des Ehrenmitgliedes um jeweils fünf Jahre verlängern.}
 
-\Satz{3}{Ehrenmitglieder sind von der Beitragspflicht befreit. Sie besitzen
-kein passives Wahlrecht.}
+\Satz{3}{Ehrenmitglieder sind von der Beitragspflicht befreit. Im übrigen
+bleiben ihre Rechte und Pflichten als Mitglied unberührt.}
 
 \end{Artikel}
 
 \begin{Artikel}{10}{Ende der Mitgliedschaft}
 
-\Satz{1}{Die Mitgliedschaft ist grundsätzlich auf acht Semester befristet.
-Sie kann vom Vorstand auf Antrag um jeweils zwei Semester verlängert werden.}
+\Satz{1}{Die Mitgliedschaft ist grundsätzlich auf 4 Jahre befristet.
+Sie kann vom Vorstand auf Antrag um jeweils bis zu 4 Jahre verlängert werden.
+Bekleidet ein Mitglied ein Amt und würde seine Mitgliedschaft während seiner
+Amtszeit enden, so verlängert sie sich automatisch um ein weiteres Jahr.}
 
 \Satz{2}{Die Mitgliedschaft endet desweiteren:
 \begin{itemize}
@@ -186,7 +192,7 @@ Bereits geleistete Semesterbeiträge werden anteilig zurückerstattet.}
 \Satz{3}{Ein Mitglied, das in erheblichem Maß gegen die Vereinsinteressen
 verstoßen hat, kann durch Beschluß des Vorstands aus dem Verein ausgeschlossen
 werden. Vor dem Ausschluß ist das betroffene Mitglied schriftlich zu hören. Die
-Entscheidung über den Aussschluß ist schriftlich zu begründen und dem Mitglied
+Entscheidung über den Ausschluß ist schriftlich zu begründen und dem Mitglied
 mit Einschreiben gegen Rückschein an seine letztbekannte Anschrift zuzustellen.
 Das Mitglied kann innerhalb einer Frist von einem Monat ab Zugang schriftlich
 Berufung beim Vorstand einlegen. Über die Berufung entscheidet die
@@ -200,9 +206,8 @@ innerhalb von zwei Wochen von der Absendung der Mahnung an die letztbekannte
 Anschrift des Mitglieds voll entrichtet. In der Mahnung muß auf die
 bevorstehende Streichung der Mitgliedschaft hingewiesen werden.}
 
-\Satz{5}{Die Streichung erfolgt ebenfalls, wenn sich das Mitglied nicht bis zum
-14. Mai eines jeden Jahres beim Vorstand rückgemeldet hat. Artikel 10, Abs. 4
-ist entsprechend anzuwenden.}
+\Satz{5}{Die Streichung erfolgt regelmäßig ebenfalls, wenn das Mitglied an der
+dem Verein zuletzt bekannt gegebenen Postanschrift keinen Wohnsitz mehr hat.}
 
 \end{Artikel}
 
@@ -228,7 +233,7 @@ Sonderbereichs, des Administratorenrates oder des Vorstandes bestritten werden.}
 
 \end{Artikel}
 
-\begin{Artikel}{13}{Gewalt über das Rechnernetz}
+\begin{Artikel}{13}{Gewalt über die technische Infrastruktur}
 
 \Satz{1}{Das Rechnernetz ist bis zu den Endgeräten durch Vereinseigentum
 aufzubauen. Seine Funktion darf nur von vereinseigener Hardware abhängen. 
@@ -237,13 +242,14 @@ Leibniz-Rechenzentrums oder anderer öffentlicher Einrichtungen sind davon
 ausgenommen.}
 
 \Satz{2}{Weitergehende Rechte auf einem vereinseigenen Rechner oder anderen
-Netzkomponenten werden regelmäßig nur Administratoren sowie Beauftragten des
-Studentenwerks eingeräumt. Über begründete Ausnahmen beschließt der
-Administratorenrat im Einvernehmen mit dem Vorstand.}
+technischen Einrichtungen werden regelmäßig nur Administratoren, den
+Mitgliedern des Vorstandes sowie Beauftragten des Studentenwerks eingeräumt.
+Über begründete Ausnahmen beschließt der Administratorenrat im Einvernehmen mit
+dem Vorstand.}
 
-\Satz{3}{Der Vorsitzende des Administratorenrates führt eine Liste, wer auf
-welchem der vereinseigenen Rechner oder anderen Netzkomponenten weitergehende
-Rechte besitzt.}
+\Satz{3}{Die technischen Vorstände führen eine Liste, wer auf welchem der
+vereinseigenen Rechner oder technischen Einrichtungen weitergehende Rechte
+besitzt.}
 
 \end{Artikel}
 
@@ -289,7 +295,14 @@ Ausschluß durch den Vorstand
 \Satz{3}{Sie kann eine Rahmengeschäftsordnung für alle Vereinsgremien, eine
 Beitragsordnung oder eine Haushaltsordnung erlassen.}
 
-\Satz{4}{Über die Beschlüsse der Mitgliedervollversammlung ist ein Protokoll
+\Satz{4}{Die Mitgliedervollversammlung kann grundsätzlich festlegen, dass
+bestimmte Netzdienste angeboten werden sollen oder nicht angeboten werden
+sollen. Möchte die Mitgliedervollversammlung bestimmte Netzdienste anbieten, so
+ist die technische Infrastruktur dafür bevorzugt einzusetzen. Die Mitglieder
+des Administratorenrates sind jedoch nicht verpflichtet, diese Netzdienste
+selbst zu realisieren.}
+
+\Satz{5}{Über die Beschlüsse der Mitgliedervollversammlung ist ein Protokoll
 aufzunehmen, vom Versammlungsleiter zu unterzeichnen und vom Vorstand zu
 ver\-öffent\-lichen.}
 
@@ -300,9 +313,10 @@ ver\-öffent\-lichen.}
 \Satz{1}{Die ordentlichen Mitgliedervollversammlungen finden zweimal jährlich,
 und zwar in den Zeiträumen 1. - 15. Juni und 1. - 15. Dezember, statt.}
 
-\Satz{2}{Die Mitglieder werden mindestens zwei Wochen vor der Versammlung vom
-Vorstand durch Aushang im Vereinsanzeiger eingeladen, wobei der Tag der
-Ver\-öffent\-lichung und der Tag der Versammlung nicht mitgezählt werden.}
+\Satz{2}{Die Mitglieder werden mindestens zwei Wochen vor einer
+Mitgliedervollversammlung vom Vorstand durch Aushang im Vereinsanzeiger
+eingeladen, wobei der Tag der Ver\-öffent\-lichung und der Tag der Versammlung
+nicht mitgezählt werden.}
 
 \Satz{3}{Mit der Einladung der Mitgliedervollversammlung ist die vom Vorstand
 festgesetzte Tagesordnung mitzuteilen.}
@@ -319,10 +333,10 @@ unter Angabe des Zwecks und der Gründe fordern.}
 \begin{Artikel}{17}{Gliederung in Häuser}
 
 \Satz{1}{Der Verein ist in Häuser untergliedert. Die Häuser regeln ihre Belange
-selbst. Der Vorstand kann den Häusern Weisungen erteilen.}
+selbst. Der Vorstand und der Administratorenrat können den Häusern Weisungen
+erteilen.}
 
-\Satz{2}{Jedem Haus wird ein Netzbereich als Hausnetz zugeordnet, von dem die
-Funktion des Gesamtnetzes nicht abhängig sein darf.}
+\Satz{2}{Jedem Haus wird ein Netzbereich als Hausnetz zugeordnet.}
 
 \Satz{3}{Die Mitglieder können die Zuordnung zu den Häusern nicht wählen. 
 Ausschlaggebend ist der Standort ihres Anschlusses. Im Zweifel entscheidet der
@@ -334,8 +348,8 @@ Vorstand.}
 
 \Satz{1}{Die Häuser organisieren das Vereinsleben auf Hausebene.}
 
-\Satz{2}{Sie verwalten ihr jeweiliges Hausnetz in eigener Regie. Die
-technischen Standards des Administratorenrates werden dabei von ihnen beachtet.}
+\Satz{2}{Sie verwalten ihr jeweiliges Hausnetz in eigener Regie. Die Vorgaben
+des Administratorenrates werden dabei von ihnen beachtet.}
 
 \end{Artikel}
 
@@ -343,7 +357,7 @@ technischen Standards des Administratorenrates werden dabei von ihnen beachtet.}
 
 \Satz{1}{Jedes Haus hat einen Hausadministrator. Pro angefangene 30 Mitgliedern
 darf ein weiterer gewählt werden. Ausschlaggebend ist die Mitgliederzahl am
-\mbox{1. Januar} des jeweiligen Jahres.}
+Tag der Ladung zur jeweiligen Hausmitgliederversammlung.}
 
 \Satz{2}{Die Hausadministratoren leiten ihre Häuser, verwalten die Hausnetze
 und sind Mitglied im Administratorenrat.}
@@ -383,8 +397,9 @@ und zwar in den Zeit\-räumen 15. - 31. Mai und 15. - 30. November, statt. Sie
 wird in der Regel von einem der Hausadministratoren des Hauses, im Ausnahmefall
 vom Vorstand einberufen.}
 
-\Satz{2}{Die Mitglieder werden mindestens zwei Wochen vor der Versammlung von
-den Hausadministratoren durch Aushang im Vereinsanzeiger eingeladen.}
+\Satz{2}{Die Mitglieder werden mindestens zwei Wochen vor einer
+Hausmitgliederversammlung von einem der Hausadministratoren durch Aushang im
+Vereinsanzeiger eingeladen. Artikel 16, Abs. 2 und 3 gelten entsprechend.}
 
 \Satz{3}{Die Hausadministratoren können eine außerordentliche
 Hausmitgliederversammlung einberufen. Sie müssen das innerhalb von drei Wochen
@@ -424,7 +439,8 @@ den Vorsitzenden, falls dieser verhindert ist. Der Schatzmeister kann nicht
 gleichzeitig Administrator sein.}
 
 \Satz{3}{Der erste technische Vorstand führt den Vorsitz im Administratorenrat.
-Er muß mindestens ein Jahr lang Administrator gewesen sein.}
+Er muß mindestens 6 Monate lang Administrator gewesen sein oder mit
+satzungsändernder Mehrheit gewählt werden.}
 
 \Satz{4}{Der zweite technische Vorstand unterstützt und vertritt den ersten
 technischen Vorstand in all seinen Aufgaben und ist stellvertretender
@@ -441,12 +457,11 @@ Abwicklung notwendiger Vorgänge Sorge zu tragen.}
 \Satz{2}{Die Vorstände sollen die Entwicklung des Vereins fördern und die
 finanzielle Stabilität sicherstellen.}
 
-\Satz{3}{Ausgaben sind vom Vorstand zu bewilligen.
-Bei Ausgaben über 5.000 DM holt er die Genehmigung der 
-Mitgliedervollversammlung ein.}
+\Satz{3}{Ausgaben sind vom Vorstand zu bewilligen. Bei Ausgaben über 3.000 EUR
+müssen alle Vorstandsmitglieder zustimmen.}
 
 \Satz{4}{Die technischen Vorstände sollen jederzeit auf dem aktuellen Stand der
-Netzwerkarchitektur sein.}
+technischen Infrastruktur sein.}
 
 \end{Artikel}
 
@@ -466,14 +481,13 @@ Hausverwaltung. Dieser muß nicht Vereinsmitglied sein.}
 
 \Satz{1}{Der Administratorenrat kümmert sich um alle technischen Belange.}
 
-\Satz{2}{Er legt verbindliche technische Standards fest und verwaltet die für
-den Betrieb des Gesamtnetzes notwendigen Netzkomponenten.}
+\Satz{2}{Er legt verbindliche technische Standards fest und verwaltet die
+technische Infrastruktur des Vereins. Er entscheidet über ihren Ausbau, Umbau
+und ihre Verwendung. Die dazu benötigten Mittel bewilligt der Vorstand
+wohlwollend. Sollte der Vorstand die Bewilligung verweigern, so hat er dies
+binnen zweier Wochen im Vereinsanzeiger umfassend zu begründen.}
 
-\Satz{3}{Der Administratorenrat bestreitet seine regelmäßigen Aufgaben mit
-einer Instandhaltungspauschale, deren Höhe von der ordentlichen
-Mitgliedervollversammlung festgelegt wird.}
-
-\Satz{4}{Alle Administratoren stellen sicher, daß schnell auf alle für den
+\Satz{3}{Alle Administratoren stellen sicher, daß schnell auf alle für den
 normalen Netzbetrieb notwendigen Komponenten zugegriffen werden kann.}
 
 \end{Artikel}
@@ -487,9 +501,8 @@ Administratorenratsvorsitzender.}
 \Satz{2}{Der Administratorenrat wird in der Regel vom technischen Vorstand
 einberufen. Bei Bedarf kann er von jedem Vorstandsmitglied einberufen werden.}
 
-\Satz{3}{Der Administratorenrat muß auf Verlangen von 2 seiner Mitglieder
-innerhalb von 2 Wochen, auf Verlangen von 4 Hausadministratoren aus 4
-verschiedenen Häusern innerhalb einer Woche einberufen werden.}
+\Satz{3}{Der Administratorenrat muß auf Verlangen von 4 seiner Mitglieder
+innerhalb von 2 Wochen einberufen werden.}
 
 \end{Artikel}
 
@@ -502,12 +515,7 @@ Dezember und vom 1. Januar bis 30. Juni.}
 ge\-wählt und durch Eintragung in die Administratorenliste durch den Vorstand
 bestellt.}
 
-\Satz{3}{Die Sonderadministratoren verfügen nicht über eigene Mittel. 
-Instandhaltungsaufwendungen sind aus Mitteln der Instandhaltungspauschale zu
-bestreiten und müssen beim Administratorenrat beantragt werden. 
-Neuanschaffungen bewilligt der Vorstand.}
-
-\Satz{4}{Ist ein Sonderadministratorenamt verwaist, kann der Administratorenrat
+\Satz{3}{Ist ein Sonderadministratorenamt verwaist, kann der Administratorenrat
 einen Kommissar einsetzen. Dieser hat im Administratorenrat keine Stimme.}
 
 \end{Artikel}
